--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "ng serve --proxy-config proxy.config.js",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
@@ -12,6 +12,7 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "^8.2.6",
+        "@angular/cdk": "^8.2.0",
         "@angular/common": "~8.2.0",
         "@angular/compiler": "~8.2.0",
         "@angular/core": "~8.2.0",
